--- a/src/pages/NewOrderPage/NewOrderPage.css
+++ b/src/pages/NewOrderPage/NewOrderPage.css
@@ -1,10 +1,18 @@
 .NewOrderPage {
-    height: 100%;
-    display: grid;
-    grid-template-columns: 1.6fr 3.5fr 3fr;
-    grid-template-rows: 1fr;
-    background-color: var(--white);
+    background-color: #adadad;
     border-radius: 2vmin;
+}
+
+.NewOrderPageHeader {
+    text-align: center;
+    color: #501B1D;
+    margin: 0 3vmin 3vmin 3vmin;
+}
+
+.NewOrderPageBody {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
 .NewOrderPage aside {
