--- a/src/components/OrderDetail/OrderDetail.css
+++ b/src/components/OrderDetail/OrderDetail.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 3vmin;
     font-size: 2vmin;
-    color: var(--text-light);
+    color: #2E1114;
 }
 
 .OrderDetail .section-heading {
@@ -19,11 +19,11 @@
 }
 
 .OrderDetail .total {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 18.35vw 5.75vw 5.25vw;
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
     padding: 1vmin 0;
-    color: var(--text-light);
+    color: #2E1114;
     border-top: .1vmin solid var(--tan-3);
 }
 
@@ -32,7 +32,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.5vw;
-    color: var(--text-dark);
+    color: #2E1114;
 }
 
 .OrderDetail .total span.right {
