--- a/src/pages/OrderHistoryPage/OrderHistoryPage.css
+++ b/src/pages/OrderHistoryPage/OrderHistoryPage.css
@@ -1,16 +1,8 @@
 .OrderHistoryPage {
     height: 100%;
     display: grid;
-    grid-template-columns: 1.6fr 3.5fr 3fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    background-color: var(--white);
+    background-color: #ADADAD;
     border-radius: 2vmin;
-}
-
-.OrderHistoryPage aside {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin: 3vmin 2vmin;
 }
