--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 /* CSS Custom Properties */
 :root {
   --white: #FFFFFF;
@@ -22,7 +8,7 @@ code {
   --orange: #F67F00;
   --text-light: #968c84;
   --text-dark: #615954;
-}
+} 
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -35,7 +21,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--tan-4);
+  background-color: #adadad;
   padding: 2vmin;
   height: 100vh;
 }
@@ -84,7 +70,7 @@ code {
   justify-content: space-around;
   align-items: center;
   background-color: var(--tan-1);
-  color: var(--text-dark);
+  color: #2E1114;
   border: .1vmin solid var(--tan-3);
   border-radius: 1vmin;
   padding: .6vmin;
@@ -92,9 +78,28 @@ code {
   font-size: 2vmin;
 }
 
+.qty {
+  margin-top: 2vmin;
+}
+
+.ext-price {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1vmin;
+}
+
+.AuthPage {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .form-container {
+  margin-top: 1vmin;
   padding: 3vmin;
-  background-color: var(--tan-1);
+  background-color: #fdf9e7;
   border: .1vmin solid var(--tan-3);
   border-radius: 1vmin;
 }
@@ -108,7 +113,7 @@ form {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 1.25vmin;
-  color: var(--text-light);
+  color: var(--text-dark);
 }
 
 label {
@@ -123,19 +128,19 @@ input {
   border: .1vmin solid var(--tan-3);
   border-radius: .5vmin;
   color: var(--text-dark);
-  background-image: none !important; /* prevent lastpass */
+  background-image: none !important; /* prevent lastpass  */
   outline: none;
 }
 
 input:focus {
-  border-color: var(--orange);
+  border-color: #BC986A;
 }
 
 button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
-  background-color: var(--orange);
+  background-color: #659DBD;
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
@@ -149,11 +154,13 @@ button, a.button {
 button.btn-sm {
   font-size: 1.5vmin;
   padding: .6vmin .8vmin;
+  background-color: #D83F87;
 }
 
 button.btn-xs {
   font-size: 1vmin;
   padding: .4vmin .5vmin;
+  background-color: #D83F87;
 }
 
 button:disabled, form:invalid button[type="submit"] {
@@ -164,4 +171,4 @@ button:disabled, form:invalid button[type="submit"] {
 button[type="submit"] {
   grid-column: span 2;
   margin: 1vmin 0 0;
-} 
+}  
