--- a/src/components/OrderList/OrderList.css
+++ b/src/components/OrderList/OrderList.css
@@ -1,8 +1,8 @@
 .OrderList {
-    background-color: var(--tan-1);
+    background-color: #A6607C;
     border: .1vmin solid var(--tan-3);
     border-radius: 2vmin;
-    margin: 3vmin 0;
+    margin: 3vmin;
     padding: 3vmin;
     overflow-y: scroll;
 }
