delete NavBar.css file and transfer styles to index.css

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,21 @@ code {
   margin-bottom: 1vmin;
 }
 
+.NavBar {
+  background-color: #44318D;
+  font-weight: bolder;
+}
+
+.NavbarBrandText {
+  font-family: 'Dancing Script', cursive;
+  font-weight: bolder;
+}
+
+.drawer-title {
+  font-family: 'Dancing Script', cursive;
+  font-weight: bolder;
+}
+
 .AuthPage {
   position: absolute;
   display: flex;
